# btrees

./: CMakeLists.txt  README.md
root/docs/: .gitignore
root/docs/research/: .gitignore  Anton_Rigin_CoCoS_Abstract.tex  Multiway_Trees_Research.docx  ResearchProposal.aux  ResearchProposal.tex  SourcesList.aux  SourcesList.tex  Ригин_Антон_БПИ153_КР_3_курс_отчёт.docx
root/docs/slides/: B-деревья - CoCoS 2018.pptx  Отчёт - Август 2018.pptx  Отчёт - Март 2018.pptx  Ригин_Антон_БПИ153_КР_3_курс_презентация.pptx
root/prj/0.1/sol/output/: btrees_exp.cmd  csv_generator.cmd
root/prj/0.1/sol/projects/btrees_exp/src/: CMakeLists.txt  experiment.cpp  experiment.h  main.cpp
root/prj/0.1/sol/projects/btrees_lib/src/: CMakeLists.txt  btree.cpp  btree.h  indexer.cpp  indexer.h  utils.h
root/prj/0.1/sol/projects/csv_generator/src/: CMakeLists.txt  main.cpp
root/prj/0.1/sol/samples/btrees/010_editor_scripts/: xibpt.bt  xibspt.bt  xibt.bt
root/prj/0.1/sol/samples/btrees/data_csv_files/: University_and_books_eng.csv  exp_scheme.csv  exp_scheme_results.csv  exp_scheme_results_with_additional_data.csv
root/prj/0.1/sol/samples/btrees/graphviz_files/: dot-gif-all.cmd  dot-ps-all.cmd  exp_scheme_index_355.gv  exp_scheme_int_337.gv  exp_scheme_int_355.gv
root/prj/0.1/sol/tests/btrees_lib_tests/gtest/sol/cmake/: CMakeLists.txt
root/prj/0.1/sol/tests/btrees_lib_tests/gtest/src/: CMakeLists.txt  bplustree_based_index_tests.cpp  bplustree_test.cpp  bstarplustree_based_index_tests.cpp  bstarplustree_test.cpp  bstartree_based_index_tests.cpp  bstartree_test.cpp  btree_based_index_tests.cpp  btree_test.cpp  individual.h
root/prj/0.1/sol/tests/btrees_lib_tests/gtest/src/gtest-fus/: gtest.h
root/prj/0.1/sol/tests/btrees_lib_tests/gtest/testfiles/: .gitignore  Results_Aggr_BPlusTree_Hospital_log.csv  Results_Aggr_BPlusTree_University_and_books.csv  Results_Aggr_BStarPlusTree_Hospital_log.csv  Results_Aggr_BStarPlusTree_U_a_b.csv  Results_Aggr_BStarTree_Hospital_log.csv  Results_Aggr_BStarTree_University_and_books.csv  Results_Aggr_BTree_Hospital_log.csv  Results_Aggr_BTree_University_and_books.csv  Results_BPlusTree_Hospital_log.csv  Results_BPlusTree_University_and_books.csv  Results_BStarPlusTree_Hospital_log.csv  Results_BStarPlusTree_University_and_books.csv  Results_BStarTree_Hospital_log.csv  Results_BStarTree_University_and_books.csv  Results_BTree_Hospital_log.csv  Results_BTree_University_and_books.csv  University_and_books.csv  dot-png-all.cmd  expexp.csv  expexp_results.csv
